# clawbox

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  QA_PERSONAS.md  README.md
.github/workflows/: ci.yml  release.yml  test-runner.yml
browser-extension/: README.md  manifest.json
browser-extension/popup/: popup.css  popup.html  popup.js
browser-extension/src/: background.js  content.css  content.js
crates/clawbox-cli/: Cargo.toml
crates/clawbox-cli/src/: main.rs
crates/clawbox-core/: Cargo.toml
crates/clawbox-core/src/: audit.rs  crypto.rs  error.rs  icloud.rs  lib.rs  storage.rs  sync.rs  vault.rs
crates/clawbox-ffi/: Cargo.toml
crates/clawbox-ffi/src/: lib.rs
docs/: ARCHITECTURE.md  CLI-REFERENCE.md  PRD.md  README_CN.md  ROADMAP.md  SECURITY.md
ios-app/: README.md
ios-app/ClawBox/ClawBox/: ClawBoxApp.swift  ContentView.swift  Theme.swift  VaultManager.swift
ios-app/ClawBox/ClawBox.xcodeproj/: project.pbxproj
ios-app/ClawBox/ClawBox/Assets.xcassets/AccentColor.colorset/: Contents.json
macos-app/ClawBox/ClawBox/: ClawBoxApp.swift  Theme.swift
macos-app/ClawBox/ClawBox.xcodeproj/: project.pbxproj
macos-app/ClawBox/ClawBox.xcodeproj/project.xcworkspace/xcuserdata/harris.xcuserdatad/: UserInterfaceState.xcuserstate
macos-app/ClawBox/ClawBox.xcodeproj/xcuserdata/harris.xcuserdatad/xcschemes/: xcschememanagement.plist
macos-app/ClawBox/ClawBox/Models/: VaultManager.swift
macos-app/ClawBox/ClawBox/Services/: AutoLockService.swift  BiometricAuth.swift
macos-app/ClawBox/ClawBox/Views/: ContentView.swift  SettingsView.swift
scripts/: install.sh
