[workspace]
resolver = "2"
members = [
    "crates/clawbox-core",
    "crates/clawbox-cli",
    "crates/clawbox-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Harris Han <harrishanhui@gmail.com>"]
license = "MIT"
repository = "https://github.com/AIClaw/clawbox"
homepage = "https://clawbox.dev"
description = "AI-Native Secret Manager"
keywords = ["secrets", "password", "encryption", "ai", "cli"]
categories = ["command-line-utilities", "cryptography"]

[workspace.dependencies]
# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
rpassword = "7.3"

# Testing
tempfile = "3.10"
