[package]
name = "clawbox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for ClawBox secret manager"

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
zeroize.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
sha2 = "0.10"
whoami = "1.5"
dirs = "5.0"
hostname = "0.3"

[dev-dependencies]
tempfile.workspace = true
